chore: padronizar nomes (snake_case), operações rest e swagger)
